[package]
name = "bcm2837_gpio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.8.0"

# [target.'cfg(target_os "arceos")'.dependencies]
# Linux no need depend osl on cargo,it would be through "extern osl'import
